test/official_tests/number/leading_dot.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
.123;
